# openmeteo-py-df

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/openmeteo/: __init__.py  cache.py  client.py  dataframe.py  exceptions.py  models.py  types.py
tests/: test_client.py  test_dataframe.py
